# surrealtest

./: Cargo.toml  README.md  experimental.surql  record_link.surql  sample.surql_
db/: 000013.sst  000031.sst  000054.sst  000123.sst  000146.sst  000149.sst  000154.sst  000169.sst  000172.sst  000177.sst  000192.sst  000195.sst  IDENTITY  MANIFEST-000010  MANIFEST-000028  MANIFEST-000051  MANIFEST-000120  MANIFEST-000156  MANIFEST-000179  MANIFEST-000197
src/: controller.rs  main.rs
src/db/: 000031.sst  000034.sst  000583.sst  IDENTITY  MANIFEST-000036  MANIFEST-000580
