[package]
name = "surrealtest"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
surrealdb = { version = "1.3.1", features = ["kv-rocksdb"] }
#surrealkv = "0.1.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

